kyy-k8s-config/dev/app/backend/go-admin/go-admin-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: go-admin
  name: go-admin
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: go-admin
    spec:
      imagePullSecrets:
        - name: qingdao
      containers:
        - args:
            - --registry_address=consul-server-bootstrap:8500
          name: go-admin
          image: registry.cn-qingdao.aliyuncs.com/kaoyaya-micro/admin:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
