kyy-k8s-config/dev/app/backend/go-admin/go-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    aliyun.log_store_dbstdout: stdout
    aliyun.routing.port_80: http://www.kaoyaya.com/admin/api/
    kompose.cmd: kompose-darwin-amd64 convert -f go-admin.yaml
    kompose.version: 1.17.0 (70e82c92)
  labels:
    app: go-admin
  name: go-admin
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: go-admin
